﻿Sigil v0.2.1 ADD_DATE
    - fixed an issue with files without extensions not being saved in the final epub (issue #400)
    - fixed an issue with XPGT resources sometimes being saved blank (issue #433)
    - fixed a regression that made it impossible to add removed headings back into the TOC
    (issue #439)
    - fixed a problem with some file-wide replacements reverting
    - fixed a problem with the opened tabs not being updated until the user gave them keyboard
    focus when a file-wide replace was performed (issue 408)
    - fixed a problem with Book View not reflecting changes done in Code View when the
    Code View was used for editing, and then the tab closed
    - use of custom synchronization primitives should resolve most infrequent hang bugs
    - fixed a problem with the search not progressing in Book View find&replace when using
    recursive replacements
    - fixed an issue with inserting images that have apostrophes in the filename (issue #391) 
    - TOC text now has leading and trailing whitespace trimmed, and inner whitespace condensed 
    (issue #422)
    - an empty ALT attribute is now added to <img> elements that don't have them (issue #406)
    - added the build time to the About dialog, showing date and time in UTC

Sigil v0.2.0 2010.05.11.
    - added new entries to the help menu for the online manual and the FAQ

Sigil v0.2.0 RC4 2010.05.08
    - fixed a regression that broke FindNext opening new tabs when searching across HTML files 
    (issue #384)
    - fixed an issue with autocompletion in Find dialog ignoring the case of search terms 
    (issue #385)

Sigil v0.2.0 RC3 2010.05.07
    - fixed a regression that messed up the tab order of the controls in the Find dialog
    (issue #380)
    - fixed an issue with cross-file FindNext causing a hang when the search term is not in
    the book and "Direction: All" is used (issue #378)
    - the Text folder in the Book Browser is now expanded by default after loading
